fix kit breaking changes, fix range slider pips higher z-index than multiselect options on signup forms

--- a/static/global.css
+++ b/static/global.css
@@ -9,7 +9,8 @@ body {
   background: var(--bodyBg);
   color: var(--textColor);
 }
-div#svelte {
+/* outer div = hydration target */
+body > div {
   display: grid;
   min-height: 100vh;
   grid-template-rows: auto 1fr auto;
